Changed tittle of the website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Knowledge Graph Engineering 2022/2023</title>
+    <title>Logica Computazionale - CL 2022/2023</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -87,9 +87,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Knowledge Graph Engineering</span>
+                        <span class="name">Logica Computazionale - CL </span>
                         <hr class="star-light">
-                        <span class="skills">Welcome to the homepage of the fall 2022 edition of Knowledge Graph Engineering course of the Data Science degree at the University of Trento.</span>
+                        <span class="skills">Welcome to the homepage of the fall 2022 edition of Computational Logic course of the Data Science degree at the University of Trento.</span>
                     </div>
                 </div>
             </div>
